feat: Mengaktifkan qr scanner pada User di Gudang.